--- a/.classpath
+++ b/.classpath
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" path="trunk/megamek/l10n"/>
 	<classpathentry kind="src" path="trunk/megamek/src"/>
+	<classpathentry kind="src" path="trunk/megamek/i18n"/>
 	<classpathentry exported="true" kind="lib" path="trunk/megamek/lib/TinyXML.jar"/>
 	<classpathentry kind="lib" path="trunk/megamek/lib/tinyXML07-src.zip"/>
 	<classpathentry exported="true" kind="lib" path="trunk/megamek/lib/cglib-nodep-2.2.jar"/>
