--- a/megamek/build.xml
+++ b/megamek/build.xml
@@ -86,7 +86,7 @@
 
     <target name="compile" depends="init" description="Compile java sources into class files">
         <!-- compile -->
-        <javac debug="true" debuglevel="lines,source" target="1.7" source="1.7" destdir="${builddir}" srcdir="${srcdir}" memoryInitialSize="512m" memoryMaximumSize="512m" fork="true">
+        <javac debug="true" debuglevel="lines,source" target="1.7" source="1.7" destdir="${builddir}" srcdir="${srcdir}" memoryInitialSize="512m" memoryMaximumSize="512m" fork="true" encoding="UTF-8">
             <classpath>
                 <pathelement location="${basedir}" />
                 <fileset dir="${libdir}" includes="*.jar" />
@@ -164,10 +164,10 @@
     <target name="compileTests" depends="compile" unless="skip.tests"  description="Compile unit tests">
         <delete dir="${dir.build.test}"/>
         <mkdir dir="${dir.build.test}"/>
-        <javac srcdir="${dir.test.src}" destdir="${dir.build.test}" includeantruntime="false" debug="true">
+        <javac srcdir="${dir.test.src}" destdir="${dir.build.test}" includeantruntime="false" debug="true" encoding="UTF-8">
             <classpath refid="classpath.compile-unittest"/>
         </javac>
-        <copy todir="${dir.build.test}">
+        <copy todir="${dir.build.test}" encoding="UTF-8">
             <fileset dir="${dir.test.src}">
                 <include name="**/*.xml"/>
             </fileset>
